test/testdata/classes/inheritance/static/super_invalid_property_assignment_error.lox
class Superclass {}

class Subclass < Superclass {
  static method() {
    // error: property assignment is not valid for 'super' object
    // lint error: property assignment is not valid for 'super' object
    super.x = 1; //
  }
}

_ = Subclass;
